[gd_scene load_steps=2 format=3 uid="uid://wavepreviewpanel"]

[ext_resource type="Script" path="res://scripts/ui/WavePreviewPanel.gd" id="1"]

[node name="WavePreviewPanel" type="PanelContainer"]
visible = false
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 48.0
offset_bottom = 300.0
grow_horizontal = 0
grow_vertical = 1
mouse_filter = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.85, 0.85, 0.95, 1)
text = "Wave 1"
horizontal_alignment = 1

[node name="BossBanner" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 13
theme_override_colors/font_color = Color(1, 0.3, 0.2, 1)
text = "BOSS WAVE"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="EnemyList" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="CombatLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Wave in progress..."
horizontal_alignment = 1
